Timeline FF fix
- Fixed an error where images weren’t covering their containers on FF.

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1600,7 +1600,7 @@ _::-webkit-full-page-media, _:future, :root .slideshow .item figure:before { tra
 
 .tl-slide-content .tl-media .tl-media-content-container.portrait > * { display: block; position: absolute; top: 0; right: 0; bottom: 0; left: 0; }
 
-.tl-media .tl-media-content-container .tl-media-content img { height: 100%; filter: grayscale(100%); object-fit: cover; max-height: initial !important; }
+.tl-media .tl-media-content-container .tl-media-content img { height: 100%; width: 100% !important; filter: grayscale(100%); object-fit: cover; max-height: initial !important; }
 
 .tl-media-shadow { box-shadow: none; }
 
