--- a/source/sass/c_local/_timeline/_timeline.sass
+++ b/source/sass/c_local/_timeline/_timeline.sass
@@ -85,6 +85,7 @@
   
 .tl-media .tl-media-content-container .tl-media-content img
   height: 100%
+  width: 100% !important
   filter: grayscale(100%)
   object-fit: cover
   max-height: initial !important
